@@ -2110,7 +2110,9 @@ multisite_builtin_views.update({
                                   ('host_acknowledged', None, ''),
                                   ('sitename_plain', None, ''),
                                   ('host_flapping', None, ''),
-                                  ('host_is_active', None, ''),],
+                                  ('host_is_active', None, ''),
+                                  ('host_notifications_enabled', None, ''),
+                                  ],
                      'play_sounds': False,
                      'public': True,
                      'show_filters': ['host_scheduled_downtime_depth',
